# atlas-backend

./: Cargo.toml  README.md  rustfmt.toml
api/: Cargo.toml
api/src/: health.rs  main.rs
api/src/application/: app_error.rs  app_state.rs  mod.rs
api/src/application/auth/: mod.rs  service.rs
api/src/application/imports/: context.rs  mod.rs  parser.rs
api/src/application/learning/: mod.rs
api/src/application/users/: mapper.rs  service.rs
api/src/common/: constants.rs
api/src/config/: app.rs  database.rs  mod.rs  settings.rs
api/src/domain/: mod.rs
api/src/domain/entities/: assessment_attempt.rs  assessment_result.rs  concept.rs  course.rs  course_offering.rs  learning_objective.rs  learning_objective_concept.rs  mod.rs  password_reset_token.rs  question.rs  question_concept.rs  question_option.rs  question_type.rs  solo_level.rs  student_answer.rs  student_answer_update.rs  user.rs
api/src/domain/errors/: field_error.rs  mod.rs  repository_error.rs
api/src/dto/: api_response.rs  mod.rs
api/src/dto/assessment_attempt/: assessment_attempt_response.rs  mod.rs  start_assessment_attempt_request.rs  update_assessment_attempt_request.rs
api/src/dto/auth/: change_password_request.rs  forgot_password_request.rs  login_request.rs  (+3 more)
api/src/errors/: app_error.rs  field_error.rs  mod.rs
api/src/handlers/: auth_handler.rs  learning_objective_handler.rs  user_handler.rs
api/src/infrastructure/: mod.rs
api/src/models/: mod.rs
api/src/presentation/: mod.rs
api/src/repositories/: assessment_attempt_repository.rs  concept_repository.rs  course_offering_repository.rs  course_repository.rs  learning_objective_concept_repository.rs  learning_objective_repository.rs  lo_repository.rs  mod.rs  password_reset_tokens_repository.rs  question_concept_repository.rs  question_option_repository.rs  question_repository.rs  question_type_repository.rs  solo_level_repository.rs  student_answer_repository.rs  user_repository.rs
api/src/routes/: auth.rs  health.rs  user.rs
api/src/services/: assessment_attempt_service.rs  auth_service.rs  concept_service.rs  course_offering_service.rs  course_service.rs  jwt_service.rs  learning_objective_concept_service.rs  learning_objective_service.rs  lo_service.rs  mod.rs  password_service.rs  question_concept_service.rs  question_option_service.rs  question_service.rs  question_type_service.rs  solo_level_service.rs  student_answer_service.rs  user_service.rs
api/src/validation/: course_validation.rs  lo_validation.rs  mod.rs
(+386 files in other folders)
