[workspace]
resolver = "3"
members = ["api", "entity", "migration"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Firman Sabil"]

[workspace.dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"

sea-orm = { version = "1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
garde = { version = "0.23.0", features = ["full"] }

uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
utoipa = { version = "5.5.0", features = ["macros", "axum_extras", "chrono", "time", "uuid"] }

anyhow = "1.0.103"
thiserror = "2.0.18"
