[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true

axum.workspace = true

tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

sea-orm.workspace = true

uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true

dotenvy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true
garde.workspace = true

argon2 = { version = "0.5.3", features = ["std"] }
utoipa = { version = "5.5.0", features = ["macros", "axum_extras", "chrono", "time", "uuid"] }

entity = { path = "../entity" }
migration = { path = "../migration" }
